--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 				<th>Продукт</th>
 				<th>Цена</th>
 				<th>Цена со скидкой</th>
+				<th></th>
 			</tr>
 			<tr ng-repeat='item in mainCtrl.getItems()'>
 				<td>{{item.name}}</td>
 				<td>{{item.price}}</td>
 				<td>{{item.sale}}</td>
+				<td><button type="submit" class="btn btn-default btn-xs" ng-click='mainCtrl.productDelete(item)'>Удалить</button></td>
 			</tr>
 		</table>
 		<br>
