--- a/index.html
+++ b/index.html
@@ -1,58 +1,172 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app='app'>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Корзина</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/angular.min.js"></script>
-	<script type="text/javascript" src='js/lodash.min.js'></script>
+    <meta charset="utf-8">
+
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
+    <title>arkan</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="msapplication-TileColor" content="#383e53">
+
+    <link rel="stylesheet" href="_assets/css/styles.min.css">
+
+    <script type="text/javascript">
+        var pathRoot = '{$doc_root}',
+            inlineScripts =  [];
+    </script>
 </head>
-<body ng-controller='mainCtrl as mainCtrl' ng-cloak>
-	<div class="container">
-		<h2>Добавить продукт</h2>
-		<form class="form-inline" role="form" ng-submit='mainCtrl.addProduct()'>
-			<div class="form-group">
-				<label class="sr-only" for="exampleInputEmail2">Продукт</label>
-				<input type="text" class="form-control" id="exampleInputEmail2" placeholder="Продукт" ng-model='mainCtrl.product.name' required>
-			</div>
-			<div class="form-group">
-				<label class="sr-only" for="exampleInputPassword2">Цена</label>
-				<input type="number" class="form-control" id="exampleInputPassword2" placeholder="Цена" ng-model='mainCtrl.product.price' required>
-			</div>
-			<button type="submit" class="btn btn-default">Добавить</button>
-		</form>
-		<br><hr><br>
-		<h2>Корзина</h2>
-		<table class="table table-striped">
-			<tr>
-				<th>Продукт</th>
-				<th>Цена</th>
-				<th>Цена со скидкой</th>
-				<th></th>
-			</tr>
-			<tr ng-repeat='item in mainCtrl.getItems()'>
-				<td>{{item.name}}</td>
-				<td>{{item.price}}</td>
-				<td>{{item.sale}}</td>
-				<td><button type="submit" class="btn btn-default btn-xs" ng-click='mainCtrl.productDelete(item)'>Удалить</button></td>
-			</tr>
-		</table>
-		<br>
-		<form class='form-horizontal' role="form" ng-submit='mainCtrl.sale()' name='formSale'>
-			<div class="form-group">
-			   <label class="col-sm-2 control-label">Применить скидку</label>
-			   <div class="col-sm-1">
-			    	<input type="number" class="form-control" ng-model='mainCtrl.sizeSale' required>
-			   </div>
-			   <div class="col-sm-9">
-			   		<button type="submit" class="btn btn-default">Применить</button>
-			   </div>
-			</div>
-		</form>
-	</div>
-	<script type="text/javascript" src="js/angular/controllers/controllers.js"></script>
-	<script type="text/javascript" src="js/angular/factories/cartFactories.js"></script>
-	
+<body>
+<div id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=7GS9uc3AfHk',containment:'#wrapVideo',autoPlay:true, mute:true, startAt:0, opacity:0.6, showControls:false}"></div>
+<div class="video">
+    <a href="#" class="video__link show-catalog">Смотреть каталог весна-лето</a>
+    <div id="wrapVideo" class="video__player">
+        <div class="title">
+            <h1 class="title__top">
+                СТИЛЬНЫЙ ТРИКОТАЖ
+                <span class="title__small">Основа мужского гардероба</span>
+            </h1>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <h2 class="h2">Создайте свой образ по выгодной цене</h2>
+    <div class="sale-img"></div>
+    <h2 class="h2" id='sale-title'>Как получить выгоду</h2>
+    <div class="sale-list">
+        <div class="sale sale--next">
+            <img src="_assets/img/sale-1.png" alt="" class="sale__img">
+            <span class="sale__text">Добавьте в корзину <br>3 и более изделия,<br>учавствующие в акции</span>
+        </div>
+        <div class="sale sale--next">
+            <img src="_assets/img/sale-2.png" alt="" class="sale__img">
+            <span class="sale__text">Скидка<br>автоматически<br>рассчитается в корзине</span>
+        </div>
+        <div class="sale">
+            <img src="_assets/img/sale-3.png" alt="" class="sale__img">
+            <span class="sale__text">Получите выгоду<br>на свой заказ</span>
+        </div>
+    </div>
+    <div class="product-header">
+        <h2 class="h2">Куртки-ветровки</h2>
+        <a href="#" class="product-header__link">Перейти к покупкам</a>
+    </div>
+    <div class="slider">
+        <div class="slider-visual">
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/1.jpg" data-src="_assets/img/products/1.jpg">
+                <img src="_assets/img/products/1.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/2.jpg" data-src="_assets/img/products/2.jpg">
+                <img src="_assets/img/products/2.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/3.jpg" data-src="_assets/img/products/3.jpg">
+                <img src="_assets/img/products/3.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/4.jpg" data-src="_assets/img/products/4.jpg">
+                <img src="_assets/img/products/4.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/5.jpg" data-src="_assets/img/products/5.jpg">
+                <img src="_assets/img/products/5.jpg" class="slider__img" />
+            </div>
+        </div>
+    </div>
+    <div class="product-header">
+        <h2 class="h2">РУБАШКИ, ПОЛО, ФУТБОЛКИ</h2>
+        <a href="#" class="product-header__link">Перейти к покупкам</a>
+    </div>
+    <div class="slider">
+        <div class="slider-visual">
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/6.jpg" data-src="_assets/img/products/6.jpg">
+                <img src="_assets/img/products/6.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/7.jpg" data-src="_assets/img/products/7.jpg">
+                <img src="_assets/img/products/7.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/8.jpg" data-src="_assets/img/products/8.jpg">
+                <img src="_assets/img/products/8.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/9.jpg" data-src="_assets/img/products/9.jpg">
+                <img src="_assets/img/products/9.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/10.jpg" data-src="_assets/img/products/10.jpg">
+                <img src="_assets/img/products/10.jpg" class="slider__img" />
+            </div>
+        </div>
+    </div>
+    <div class="product-header">
+        <h2 class="h2">БРЮКИ CASUAL И ДЖИНСЫ</h2>
+        <a href="#" class="product-header__link">Перейти к покупкам</a>
+    </div>
+    <div class="slider">
+        <div class="slider-visual">
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/11.jpg" data-src="_assets/img/products/11.jpg">
+                <img src="_assets/img/products/11.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/12.jpg" data-src="_assets/img/products/12.jpg">
+                <img src="_assets/img/products/12.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/13.jpg" data-src="_assets/img/products/13.jpg">
+                <img src="_assets/img/products/13.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/14.jpg" data-src="_assets/img/products/14.jpg">
+                <img src="_assets/img/products/14.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/15.jpg" data-src="_assets/img/products/15.jpg">
+                <img src="_assets/img/products/15.jpg" class="slider__img" />
+            </div>
+        </div>
+    </div>
+    <div class="product-header">
+        <h2 class="h2">ОБУВЬ И АКСЕССАУРЫ</h2>
+        <a href="#" class="product-header__link">Перейти к покупкам</a>
+    </div>
+    <div class="slider">
+        <div class="slider-visual">
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/16.jpg" data-src="_assets/img/products/16.jpg">
+                <img src="_assets/img/products/16.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/17.jpg" data-src="_assets/img/products/17.jpg">
+                <img src="_assets/img/products/17.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/18.jpg" data-src="_assets/img/products/18.jpg">
+                <img src="_assets/img/products/18.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/19.jpg" data-src="_assets/img/products/19.jpg">
+                <img src="_assets/img/products/19.jpg" class="slider__img" />
+            </div>
+            <div class="slider__img-wrap" data-thumb="_assets/img/products/20.jpg" data-src="_assets/img/products/20.jpg">
+                <img src="_assets/img/products/20.jpg" class="slider__img" />
+            </div>
+        </div>
+    </div>
+    <h2 class="h2">АКЦИИ HENDERSON</h2>
+    <a href="#" class="action"></a>
+    <h2 class="h2">УДОБСТВО ДОСТАВКИ</h2>
+    <div class="delivery-list">
+        <div class="delivery">
+            <img src="_assets/img/delivery-1.png" alt="" class="delivery__img">
+            <span class="delivery__text">
+                БЕСПЛАТНАЯ ДОСТАВКА<br>
+                при любом заказе до 8 апреля <br>
+                <a href="#">Подробнее</a>
+                </span>
+        </div>
+        <div class="delivery">
+            <img src="_assets/img/delivery-2.png" alt="" class="delivery__img">
+            <span class="delivery__text">
+                САМОВЫВОЗ В ДЕНЬ ЗАКАЗА<br>
+                Закажите на сайте – заберите в салоне<br>
+                <a href="#">Подробнее</a>
+                </span>
+        </div>
+    </div>
+</div>
+
+
+<script src="_assets/_plugins-all.min.js"></script>
+<script src="_assets/_js.min/scripts-func.min.js"></script>
+<script src="_assets/_js.min/scripts.min.js"></script>
+
+<!--site map-->
+<script src="_sm/svksitemap.js"></script>
 </body>
 </html>
